--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>MediatR.Extensions.Examples</AssemblyName>
+    <RootNamespace>MediatR.Extensions.Examples</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
